<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/widget27"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:background="#f5f5f5"
	xmlns:android="http://schemas.android.com/apk/res/android">
		
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">		
		<EditText 
			android:id="@+id/tweet_edt" 
			android:layout_width="fill_parent"	
			android:layout_height="wrap_content" 
			android:text="" android:textSize="18sp">
		</EditText>
	</LinearLayout>
	
	
	<LinearLayout 
		android:gravity="right"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">


		<Button android:id="@+id/voice_bt"
			android:background="@drawable/voice_button_9"
	      	android:layout_marginLeft="1dip"
	      	android:layout_marginRight="1dip"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" 
	        android:layout_weight="1" >
	    </Button>
			
			
		<Button android:id="@+id/changeLanguage_bt"
			android:text="@string/changeLanguage_bt" 			
	        android:layout_width="fill_parent"
			android:layout_weight="1"
	        android:layout_height="wrap_content"/>			
			
		<Button android:id="@+id/Twitter_bt" 
	      	android:layout_marginLeft="1dip"
	      	android:layout_marginRight="1dip"				
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" 
			android:layout_weight="1"
			android:text="@string/Twitter_bt" />

		<Button android:id="@+id/login_bt"
			android:text="@string/login_bt"
	        android:layout_width="fill_parent"
			android:layout_weight="1"
	        android:layout_height="wrap_content"/>
					
	</LinearLayout>


	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">		
		<TextView
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:id="@+id/guide_simple"
     	  android:textColor="#333333"
		  android:layout_marginLeft="36px" 
		  android:layout_marginRight="36px"  
		  android:textSize="24px"   	  
		  android:text=""
		/>
	</LinearLayout>	

	<LinearLayout android:orientation="vertical"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content">
		<RadioGroup android:layout_height="wrap_content"
			android:id="@+id/way_to_tweet_radioGroup_first_page"
			android:orientation="vertical" 
			android:layout_width="fill_parent">
			<RadioButton android:layout_height="wrap_content"
				android:layout_marginLeft="36px" 
				android:layout_marginRight="36px"
				android:id="@+id/way_to_tweet_directly_first_page"
				android:layout_width="wrap_content" 
				android:textSize="24px"
				android:text="@string/way_to_tweet_directly_first_page"
				android:textColor="#333333" 
				android:checked="true"></RadioButton>
			<RadioButton android:layout_height="wrap_content"
				android:layout_marginLeft="36px" 
				android:layout_marginRight="36px"
				android:id="@+id/way_to_tweet_confirm_first_page"
				android:layout_width="wrap_content" 
				android:textSize="24px"
				android:text="@string/way_to_tweet_confirm_first_page"
				android:textColor="#333333"></RadioButton>
		</RadioGroup>
	</LinearLayout>  
		
		
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">		
		<TextView
		  android:layout_width="wrap_content"
		  android:layout_height="wrap_content"
		  android:id="@+id/guide_setting"
     	  android:textColor="#333333"
		  android:layout_marginLeft="36px" 
		  android:layout_marginRight="36px"
		  android:textSize="24px"       	  
		  android:text="@string/guide_setting"
		/>
	</LinearLayout>			
	
	
	<ListView android:id="@+id/Twit_listview"
		android:layout_height="wrap_content" android:layout_width="fill_parent" />
</LinearLayout>
